2013-07-04  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/README.ja docs/term-ja.diff:  Update Japanese help texts.

2013-07-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/time.c (gstrptime): Beware of time in seconds specified as an
	exponential; e.g. 123.456e7 seconds does not end in 456 usec.

	* src/graph3d.c: Better fix for	Bug #1252, inverted parallel axis labels

2013-07-02  Mojca Miklavec  <mojca.miklavec.lists@gmail.com>

	* src/command.c src/plot.c src/plot.h src/variable.c:
	Remove obsolete instances of #ifdef (_Macintosh)

2013-07-02  Ulrich Müller  <ulimueller@users.sf.net>

	* docs/doc2texi.el:  Provide a substitute for the lisp routine
	replace-regexp-in-string, which is missing in xemacs prior to version
	25.1.something.

	* docs/Makefile.am:  Modify build commands for gnuplot.texi so that
	xemacs and newer emacs (25.1) are happy.

	* docs/doc2texi.el:  Map terminal HELP sections to level 3 (subsection)
	and level 4 (subsubsection) rather than levels 4 and 5.
	Bug #1226

2013-07-02  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc:  Sync translation to version 1.810
	* docs/gnuplot.doc:  Fix typos.
	Correct the documentation for the order of elements in a binary matrix
	or ascii nonuniform matrix.
	Bug #1248

2013-07-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/Makefile.am:  Drop original PC assembly files from the source
	tarball (corgraph.asm header.mac hrcgraph.asm pcgraph.asm lineproc.mac)

	* src/hidden3d.c src/contour.c src/gplt_x11.c src/qtterminal/qt_term.cpp
	term/cairo.trm:  Reduce the number of annoying compiler warnings.

	* src/datafile.c (plot_ticlabel_using):  Explicit error message if
	required parentheses are missing from using spec.
	Bug #1256

	* src/command.c (print_command): Print \n after each line of a datablock

	* src/time.c (gstrptime): Pass through fractional seconds read with
	time format "%s".

2013-06-30  Ethan A Merritt  <merritt@u.washington.edu>
